--- a/public/about/index.html
+++ b/public/about/index.html
@@ -120,7 +120,7 @@
 <div id="pagepiling">
 
 <!-- START BANNER -->
-    <section class="section slide1 p-0" id="home">
+    <section class="section slide1 home-first p-0" id="home">
         <div class="slider-area" id="slider-area">
             <iframe class="about-iframe" src="http://111.229.109.174:8888/threeEarth"></iframe>
             <div class="row align-items-center">
