--- a/public/about/index.html
+++ b/public/about/index.html
@@ -122,7 +122,7 @@
 <!-- START BANNER -->
     <section class="section slide1 home-first p-0" id="home">
         <div class="slider-area" id="slider-area">
-            <iframe class="about-iframe" src="http://localhost:8888/threeEarth"></iframe>
+            <iframe class="about-iframe" src="http://111.229.109.174:8888/threeEarth"></iframe>
             <div class="row align-items-center">
                 <div class="col-12 col-lg-6 image-order">
                     <div class="slider-image">
